fix: update Flex.css to adjust justify-content and align-items properties; modify htmlJS.html to comment out math.js script

--- a/C S S/Flex.css
+++ b/C S S/Flex.css
@@ -12,11 +12,11 @@
 
     display: flex;
 
-    justify-content: space-between;
+    justify-content: space-around;
 
-    /*! justify-content values:start,end, space-evenly, space-between, space-around */
+    /* justify-content values:start,end, space-evenly, space-between, space-around */
     
-    align-items: end;
+    align-items: center;
 }
 
 #container div {
